2003-03-04 (THH):
  * The IKBD emulation does not longer duplicate joystick fire buttons when
    a game (like Babarian) tries to use both, joystick and mouse => Games like
    Lotus Turbo Esprit Challange are now working again!
  * Improved audio timer function - the code should now be a little bit faster.

2003-03-03 (THH):
  * Resynced Hatari's UAE CPU core with UAE 0.8.22 - this fixes some bugs in
    68k instructions like ABCD and SBCD.
  * Now only reinitializing the sound subsystem if really needed, this should
    fix a problem with Linux ALSA sound driver.
  * Added another patch for TOS 2.05 so that this TOS version should now work
    with Hatari, too.

2003-02-28 (THH):
  * Rewrote TOS patching routine. It is more flexible now.
  * Removed 0xa0ff opcode for VDI resolutions; using GEMDOS_OPCODE now instead.

2003-02-02 (THH):
  * Fixed MMU RAM size configuration bug.
  * Rewrote some screen conversion functions in C (low320x8.c, low640x8.c,
    med640x8.c and spec640x16.c).

2003-01-29 (THH):
  * When a bus or address error occurred, the PC was often not set to the
    right exception handler routine. This has been fixed now - thanks to
    Philippe Gerin for finding the bug and the patch for solving it!

2002-12-30 (THH):  *** Version 0.25 ***
  * Added some more bus error entries in intercept.c (just like on a real ST).
  * Updated the readme.txt.

2002-12-23 (THH):
  * Moved Hatari's line-a opcodes (0xa000 and 0xa0ff) from tos.c to cartimg.c
    so that the extended VDI resolutions should now also work with hard disk
    emulation turned on.
  * WinSTon turned off screen rendering while booting in a VDI resolution
    mode. This has been enable again, so that the user can see what's going
    on. However, booting in a VDI mode is now a little bit slower (especially
    on TOS 2.06).

2002-12-22 (THH):
  * VDI resolutions with 4 colors are now working, too.
  * Fixed some bugs in screen.c

2002-11-30 (THH):